--- a/_output/set/AN6.conf
+++ b/_output/set/AN6.conf
@@ -50,3 +50,25 @@ set vlans DEAD_VLAN vlan-id 666
 set vlans DEAD_VLAN description DEAD_VLAN
 set vlans NATIVE_VLAN vlan-id 999
 set vlans NATIVE_VLAN description NATIVE_VLAN
+set protocols mstp bpdu-block-on-edge
+set protocols mstp configuration-name labregion1
+set protocols mstp bridge-priority 16k
+set protocols mstp interface all
+set protocols mstp interface xe-0/0/1 no-root-port
+set protocols mstp interface xe-0/0/1 edge
+set protocols mstp interface xe-0/0/2 no-root-port
+set protocols mstp interface xe-0/0/2 edge
+set protocols mstp interface xe-0/0/3 no-root-port
+set protocols mstp interface xe-0/0/3 edge
+set protocols mstp interface xe-0/0/4 no-root-port
+set protocols mstp interface xe-0/0/4 edge
+set protocols mstp interface xe-0/0/5 no-root-port
+set protocols mstp interface xe-0/0/5 edge
+set protocols mstp interface xe-0/0/6 no-root-port
+set protocols mstp interface xe-0/0/6 edge
+set protocols mstp interface xe-0/0/7 no-root-port
+set protocols mstp interface xe-0/0/7 edge
+set protocols mstp interface xe-0/0/8 no-root-port
+set protocols mstp interface xe-0/0/8 edge
+set protocols mstp msti 1 bridge-priority 16k
+set protocols mstp msti 1 vlan [ USERS  PHONES  PRINTERS  MGMT ]
