--- a/_output/set/CN2.conf
+++ b/_output/set/CN2.conf
@@ -12,6 +12,9 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
+set interfaces lo0 unit 0 family inet address 2.2.2.2 /32
+set interfaces lo0 unit 0 family inet no-redirects
+set interfaces lo0 unit 0 family inet description 
 set interfaces xe-0/0/0 unit 0 family inet address 10.0.2.2 /30
 set interfaces xe-0/0/0 unit 0 family inet no-redirects
 set interfaces xe-0/0/0 unit 0 family inet description to SDP
@@ -43,4 +46,5 @@ set protocols ospf area 0.0.0.0 interface xe-0/0/3.0 interface-type p2p
 set protocols ospf area 0.0.0.0 interface xe-0/0/3.0 hello-interval 1
 set protocols ospf area 0.0.0.0 interface xe-0/0/3.0 dead-interval 4
 set protocols ospf area 0.0.0.0 interface xe-0/0/3.0 authentication md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"
+set protocols ospf area 0.0.0.0 interface lo0.0 passive
 set protocols ospf reference-bandwidth 100g
