--- a/_output/set/DN2.conf
+++ b/_output/set/DN2.conf
@@ -12,6 +12,9 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
+set interfaces lo0 unit 0 family inet address 4.4.4.4 /32
+set interfaces lo0 unit 0 family inet no-redirects
+set interfaces lo0 unit 0 family inet description 
 set interfaces xe-0/0/0 unit 0 family inet address 10.1.4.2 /30
 set interfaces xe-0/0/0 unit 0 family inet no-redirects
 set interfaces xe-0/0/0 unit 0 family inet description to CN1
@@ -79,4 +82,27 @@ set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb u
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols ospf area 0.0.0.0 interface xe-0/0/1.0 hello-interval 1
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols ospf area 0.0.0.0 interface xe-0/0/1.0 dead-interval 4
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols ospf area 0.0.0.0 interface xe-0/0/1.0 authentication md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols ospf area 0.0.0.0 interface lo0.0 passive
 set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols ospf reference-bandwidth 100g
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp bpdu-block-on-edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp configuration-name labregion1
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp bridge-priority 8k
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface all
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/4 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/4 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/5 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/5 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/6 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/6 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/7 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/7 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/8 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/8 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/9 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/9 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/10 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/10 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/11 no-root-port
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp interface xe-0/0/11 edge
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp msti 1 bridge-priority 8k
+set interfaces irb unit CN210 irb unit CN220 irb unit CN230 irb unit CN240 irb unit CN2666 irb protocols mstp msti 1 vlan [ USERS  PHONES  PRINTERS  MGMT ]
