--- a/_output/DN1.conf
+++ b/_output/DN1.conf
@@ -40,6 +40,15 @@ system {
 
 }
 interfaces {
+    lo0 {
+        unit 0 {
+            family inet {
+                address 3.3.3.3 /32;
+                no-redirects;
+                description ;
+            }
+        }
+    }
     xe-0/0/0 {
         unit 0 {
             family inet {
@@ -226,6 +235,9 @@ protocols {
                     authentication {
                         md5 1 key "$9$chHrvLdVYaGi7-VYoJkqp0OISrvWL"; ## SECRET-DATA
                     }
+                }
+                interface lo0.0 {
+                    passive;
                 }
             }
             reference-bandwidth 100g;
