--- a/devices.yml
+++ b/devices.yml
@@ -3,6 +3,10 @@ devices:
   - hostname: CN1
     CN: CN1
     ip_interfaces:
+      - name: lo0
+        unit: 0
+        ip: 1.1.1.1
+        mask: /32
       - name: xe-0/0/0
         unit: 0
         ip: 10.0.1.2
@@ -37,6 +41,10 @@ devices:
   - hostname: CN2
     CN: CN2
     ip_interfaces:
+      - name: lo0
+        unit: 0
+        ip: 2.2.2.2
+        mask: /32
       - name: xe-0/0/0
         unit: 0
         ip: 10.0.2.2
@@ -71,6 +79,10 @@ devices:
   - hostname: DN1
     CN: CN1
     ip_interfaces:
+      - name: lo0
+        unit: 0
+        ip: 3.3.3.3
+        mask: /32
       - name: xe-0/0/0
         unit: 0
         ip: 10.1.3.2
@@ -101,6 +113,10 @@ devices:
   - hostname: DN2
     CN: CN2
     ip_interfaces:
+      - name: lo0
+        unit: 0
+        ip: 4.4.4.4
+        mask: /32
       - name: xe-0/0/0
         unit: 0
         ip: 10.1.4.2
