added missing description to loopback

--- a/_output/CN2.conf
+++ b/_output/CN2.conf
@@ -45,7 +45,7 @@ interfaces {
             family inet {
                 address 2.2.2.2/32;
                 no-redirects;
-                description ;
+                description loopback;
             }
         }
     }
