--- a/_output/DN1.conf
+++ b/_output/DN1.conf
@@ -45,7 +45,7 @@ interfaces {
             family inet {
                 address 3.3.3.3/32;
                 no-redirects;
-                description ;
+                description loopback;
             }
         }
     }
