--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -45,7 +45,7 @@ interfaces {
             family inet {
                 address 4.4.4.4/32;
                 no-redirects;
-                description ;
+                description loopback;
             }
         }
     }
