--- a/_output/CN1.conf
+++ b/_output/CN1.conf
@@ -45,7 +45,7 @@ interfaces {
             family inet {
                 address 1.1.1.1/32;
                 no-redirects;
-                description ;
+                description loopback;
             }
         }
     }
