--- a/devices.yml
+++ b/devices.yml
@@ -7,6 +7,7 @@ devices:
         unit: 0
         ip: 1.1.1.1
         mask: /32
+        description: loopback
       - name: xe-0/0/0
         unit: 0
         ip: 10.0.1.2
@@ -45,6 +46,7 @@ devices:
         unit: 0
         ip: 2.2.2.2
         mask: /32
+        description: loopback
       - name: xe-0/0/0
         unit: 0
         ip: 10.0.2.2
@@ -83,6 +85,7 @@ devices:
         unit: 0
         ip: 3.3.3.3
         mask: /32
+        description: loopback
       - name: xe-0/0/0
         unit: 0
         ip: 10.1.3.2
@@ -117,6 +120,7 @@ devices:
         unit: 0
         ip: 4.4.4.4
         mask: /32
+        description: loopback
       - name: xe-0/0/0
         unit: 0
         ip: 10.1.4.2
