various formatting issues when trying to load into devices

--- a/_output/AN6.conf
+++ b/_output/AN6.conf
@@ -42,10 +42,10 @@ system {
 interfaces {
     irb {
         unit 140 {
+            description "CN1_MGMT";
             family inet {
-                address 192.168.1.6/24;
+                address 10.1.40.3/24;
                 no-redirects;
-                description CN1_MGMT;
             }
         }
     }
@@ -53,9 +53,9 @@ interfaces {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN1_USERS  CN1_PHONES  CN1_PRINTERS  CN1_MGMT ];
                 }
             }
         }
@@ -63,7 +63,7 @@ interfaces {
     xe-0/0/1 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -73,7 +73,7 @@ interfaces {
     xe-0/0/2 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -83,7 +83,7 @@ interfaces {
     xe-0/0/3 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -93,7 +93,7 @@ interfaces {
     xe-0/0/4 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -103,7 +103,7 @@ interfaces {
     xe-0/0/5 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -113,7 +113,7 @@ interfaces {
     xe-0/0/6 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -123,7 +123,7 @@ interfaces {
     xe-0/0/7 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -133,7 +133,7 @@ interfaces {
     xe-0/0/8 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -144,22 +144,18 @@ interfaces {
 vlans {
     CN1_USERS {
         vlan-id 110;
-        l3-interface irb.110;
         description CN1_Users; 
     }
     CN1_PHONES {
         vlan-id 120;
-        l3-interface irb.120;
         description CN1_Phones; 
     }
     CN1_PRINTERS {
         vlan-id 130;
-        l3-interface irb.130;
         description CN1_Printers; 
     }
     CN1_MGMT {
         vlan-id 140;
-        l3-interface irb.140;
         description CN1_Management; 
     }
     DEAD_VLAN {
@@ -211,7 +207,7 @@ protocols {
             }
             msti 1 {
                 bridge-priority 16k;
-                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+                vlan [ 110  120  130  140 ];
             }
             
         }
