--- a/_output/AN7.conf
+++ b/_output/AN7.conf
@@ -42,10 +42,10 @@ system {
 interfaces {
     irb {
         unit 240 {
+            description "CN2_MGMT";
             family inet {
-                address 192.168.2.7/24;
+                address 10.2.40.2/24;
                 no-redirects;
-                description CN2_MGMT;
             }
         }
     }
@@ -53,9 +53,9 @@ interfaces {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN2_USERS  CN2_PHONES  CN2_PRINTERS  CN2_MGMT ];
                 }
             }
         }
@@ -63,7 +63,7 @@ interfaces {
     xe-0/0/1 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -73,7 +73,7 @@ interfaces {
     xe-0/0/2 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -83,7 +83,7 @@ interfaces {
     xe-0/0/3 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -93,7 +93,7 @@ interfaces {
     xe-0/0/4 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -103,7 +103,7 @@ interfaces {
     xe-0/0/5 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -113,7 +113,7 @@ interfaces {
     xe-0/0/6 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -123,7 +123,7 @@ interfaces {
     xe-0/0/7 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -134,22 +134,18 @@ interfaces {
 vlans {
     CN2_USERS {
         vlan-id 210;
-        l3-interface irb.210;
         description CN2_Users; 
     }
     CN2_PHONES {
         vlan-id 220;
-        l3-interface irb.220;
         description CN2_Phones; 
     }
     CN2_PRINTERS {
         vlan-id 230;
-        l3-interface irb.230;
         description CN2_Printers; 
     }
     CN2_MGMT {
         vlan-id 240;
-        l3-interface irb.240;
         description CN2_Management; 
     }
     DEAD_VLAN {
@@ -197,7 +193,7 @@ protocols {
             }
             msti 1 {
                 bridge-priority 16k;
-                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+                vlan [ 210  220  230  240 ];
             }
             
         }
