--- a/_output/CN2.conf
+++ b/_output/CN2.conf
@@ -42,55 +42,55 @@ system {
 interfaces {
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
                 address 2.2.2.2/32;
                 no-redirects;
-                description loopback;
             }
         }
     }
     xe-0/0/0 {
         unit 0 {
+            description "to SDP";
             family inet {
                 address 10.0.2.2/30;
                 no-redirects;
-                description to SDP;
             }
         }
     }
     xe-0/0/3 {
         unit 0 {
+            description "to CN1";
             family inet {
                 address 10.1.2.2/30;
                 no-redirects;
-                description to CN1;
             }
         }
     }
     xe-0/0/1 {
         unit 0 {
+            description "to DN1";
             family inet {
                 address 10.2.3.1/30;
                 no-redirects;
-                description to DN1;
             }
         }
     }
     xe-0/0/2 {
         unit 0 {
+            description "to DN2";
             family inet {
                 address 10.2.4.1/30;
                 no-redirects;
-                description to DN2;
             }
         }
     }
     irb {
         unit 240 {
+            description "CN2_MGMT";
             family inet {
                 address 192.168.2.1/24;
                 no-redirects;
-                description CN2_MGMT;
             }
         }
     }
