--- a/_output/DN1.conf
+++ b/_output/DN1.conf
@@ -42,95 +42,83 @@ system {
 interfaces {
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
                 address 3.3.3.3/32;
                 no-redirects;
-                description loopback;
             }
         }
     }
     xe-0/0/0 {
         unit 0 {
+            description "to CN1";
             family inet {
                 address 10.1.3.2/30;
                 no-redirects;
-                description to CN1;
             }
         }
     }
     xe-0/0/1 {
         unit 0 {
+            description "to CN2";
             family inet {
                 address 10.2.3.2/30;
                 no-redirects;
-                description to CN2;
             }
         }
     }
     irb {
         unit 140 {
+            description "CN1_MGMT";
             family inet {
-                address 192.168.1.3/24;
+                address 10.1.40.1/24;
                 no-redirects;
-                description CN1_MGMT;
             }
         }
     }
     irb {
-        unit CN110 {
+        unit 110 {
+            description "layer 3 interface for vlan CN1_USERS 110"
             family inet {
-                address 10.1.10/24;
+                address 10.1.10.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN1_USERS 110"
             }
         }
+    }
     irb {
-        unit CN120 {
+        unit 120 {
+            description "layer 3 interface for vlan CN1_PHONES 120"
             family inet {
-                address 10.1.20/24;
+                address 10.1.20.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN1_PHONES 120"
             }
         }
+    }
     irb {
-        unit CN130 {
+        unit 130 {
+            description "layer 3 interface for vlan CN1_PRINTERS 130"
             family inet {
-                address 10.1.30/24;
+                address 10.1.30.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN1_PRINTERS 130"
             }
         }
+    }
     irb {
-        unit CN140 {
+        unit 140 {
+            description "layer 3 interface for vlan CN1_MGMT 140"
             family inet {
-                address 10.1.40/24;
+                address 10.1.40.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN1_MGMT 140"
             }
         }
-    irb {
-        unit CN1666 {
-            family inet {
-                address 10.1.666/24;
-                no-redirects;
-                description "layer 3 interface for vlan CN1_DEAD_VLAN 1666"
-            }
-        }
-    irb {
-        unit CN1999 {
-            family inet {
-                address 10.1.999/24;
-                no-redirects;
-                description "layer 3 interface for vlan CN1_NATIVE_VLAN 1999"
-            }
-        }
+    }
     xe-0/0/2 {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN1_USERS  CN1_PHONES  CN1_PRINTERS  CN1_MGMT ];
                 }
             }
         }
@@ -139,9 +127,9 @@ interfaces {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN1_USERS  CN1_PHONES  CN1_PRINTERS  CN1_MGMT ];
                 }
             }
         }
@@ -149,7 +137,7 @@ interfaces {
     xe-0/0/4 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -159,7 +147,7 @@ interfaces {
     xe-0/0/5 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -169,7 +157,7 @@ interfaces {
     xe-0/0/6 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -179,7 +167,7 @@ interfaces {
     xe-0/0/7 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN1_USERS;
                 }
@@ -266,7 +254,7 @@ protocols {
             }
             msti 1 {
                 bridge-priority 8k;
-                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+                vlan [ 110  120  130  140 ];
             }
             
         }
