--- a/_output/set/AN5.conf
+++ b/_output/set/AN5.conf
@@ -12,23 +12,23 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
-set interfaces irb unit 140 family inet address 192.168.1.5 /24
+set interfaces irb unit 140 description "CN1_MGMT"
+set interfaces irb unit 140 family inet address 192.168.1.5/24
 set interfaces irb unit 140 family inet no-redirects
-set interfaces irb unit 140 family inet description CN1_MGMT
 set interfaces xe-0/0/0 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces xe-0/0/0 unit 0 family ethernet-switching port-mode trunk
-set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
-set interfaces xe-0/0/1 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ CN1_USERS  CN1_PHONES  CN1_PRINTERS  CN1_MGMT ]
+set interfaces xe-0/0/1 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/1 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces xe-0/0/2 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/2 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/2 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces xe-0/0/3 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/3 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/3 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces xe-0/0/4 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/4 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/4 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces xe-0/0/5 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/5 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/5 unit 0 family ethernet-switching vlan members CN1_USERS
-set interfaces xe-0/0/6 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/6 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/6 unit 0 family ethernet-switching vlan members CN1_USERS
 set vlans CN1_USERS vlan-id 110
 set vlans CN1_USERS l3-interface irb.110
@@ -63,4 +63,4 @@ set protocols mstp interface xe-0/0/5 edge
 set protocols mstp interface xe-0/0/6 no-root-port
 set protocols mstp interface xe-0/0/6 edge
 set protocols mstp msti 1 bridge-priority 16k
-set protocols mstp msti 1 vlan [ USERS  PHONES  PRINTERS  MGMT ]
+set protocols mstp msti 1 vlan [ 110  120  130  140 ]
