--- a/_output/set/AN7.conf
+++ b/_output/set/AN7.conf
@@ -12,25 +12,25 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
-set interfaces irb unit 240 family inet address 192.168.2.7 /24
+set interfaces irb unit 240 description "CN2_MGMT"
+set interfaces irb unit 240 family inet address 192.168.2.7/24
 set interfaces irb unit 240 family inet no-redirects
-set interfaces irb unit 240 family inet description CN2_MGMT
 set interfaces xe-0/0/0 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces xe-0/0/0 unit 0 family ethernet-switching port-mode trunk
-set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
-set interfaces xe-0/0/1 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ CN2_USERS  CN2_PHONES  CN2_PRINTERS  CN2_MGMT ]
+set interfaces xe-0/0/1 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/1 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/2 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/2 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/2 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/3 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/3 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/3 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/4 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/4 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/4 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/5 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/5 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/5 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/6 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/6 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/6 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/7 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/7 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/7 unit 0 family ethernet-switching vlan members CN2_USERS
 set vlans CN2_USERS vlan-id 210
 set vlans CN2_USERS l3-interface irb.210
@@ -67,4 +67,4 @@ set protocols mstp interface xe-0/0/6 edge
 set protocols mstp interface xe-0/0/7 no-root-port
 set protocols mstp interface xe-0/0/7 edge
 set protocols mstp msti 1 bridge-priority 16k
-set protocols mstp msti 1 vlan [ USERS  PHONES  PRINTERS  MGMT ]
+set protocols mstp msti 1 vlan [ 210  220  230  240 ]
