--- a/_output/set/CN2.conf
+++ b/_output/set/CN2.conf
@@ -12,24 +12,24 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
-set interfaces lo0 unit 0 family inet address 2.2.2.2 /32
+set interfaces lo0 unit 0 description "loopback"
+set interfaces lo0 unit 0 family inet address 2.2.2.2/32
 set interfaces lo0 unit 0 family inet no-redirects
-set interfaces lo0 unit 0 family inet description 
-set interfaces xe-0/0/0 unit 0 family inet address 10.0.2.2 /30
+set interfaces xe-0/0/0 unit 0 description "to SDP"
+set interfaces xe-0/0/0 unit 0 family inet address 10.0.2.2/30
 set interfaces xe-0/0/0 unit 0 family inet no-redirects
-set interfaces xe-0/0/0 unit 0 family inet description to SDP
-set interfaces xe-0/0/3 unit 0 family inet address 10.1.2.2 /30
+set interfaces xe-0/0/3 unit 0 description "to CN1"
+set interfaces xe-0/0/3 unit 0 family inet address 10.1.2.2/30
 set interfaces xe-0/0/3 unit 0 family inet no-redirects
-set interfaces xe-0/0/3 unit 0 family inet description to CN1
-set interfaces xe-0/0/1 unit 0 family inet address 10.2.3.1 /30
+set interfaces xe-0/0/1 unit 0 description "to DN1"
+set interfaces xe-0/0/1 unit 0 family inet address 10.2.3.1/30
 set interfaces xe-0/0/1 unit 0 family inet no-redirects
-set interfaces xe-0/0/1 unit 0 family inet description to DN1
-set interfaces xe-0/0/2 unit 0 family inet address 10.2.4.1 /30
+set interfaces xe-0/0/2 unit 0 description "to DN2"
+set interfaces xe-0/0/2 unit 0 family inet address 10.2.4.1/30
 set interfaces xe-0/0/2 unit 0 family inet no-redirects
-set interfaces xe-0/0/2 unit 0 family inet description to DN2
-set interfaces irb unit 240 family inet address 192.168.2.1 /24
+set interfaces irb unit 240 description "CN2_MGMT"
+set interfaces irb unit 240 family inet address 192.168.2.1/24
 set interfaces irb unit 240 family inet no-redirects
-set interfaces irb unit 240 family inet description CN2_MGMT
 set protocols ospf area 0.0.0.0 interface xe-0/0/0.0 interface-type p2p
 set protocols ospf area 0.0.0.0 interface xe-0/0/0.0 hello-interval 1
 set protocols ospf area 0.0.0.0 interface xe-0/0/0.0 dead-interval 4
