--- a/_output/DN2.conf
+++ b/_output/DN2.conf
@@ -42,95 +42,83 @@ system {
 interfaces {
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
                 address 4.4.4.4/32;
                 no-redirects;
-                description loopback;
             }
         }
     }
     xe-0/0/0 {
         unit 0 {
+            description "to CN2";
             family inet {
-                address 10.1.4.2/30;
+                address 10.2.4.2/30;
                 no-redirects;
-                description to CN1;
             }
         }
     }
     xe-0/0/1 {
         unit 0 {
+            description "to CN1";
             family inet {
-                address 10.2.4.2/30;
+                address 10.1.4.2/30;
                 no-redirects;
-                description to CN2;
             }
         }
     }
     irb {
         unit 240 {
+            description "CN2_MGMT";
             family inet {
-                address 192.168.2.4/24;
+                address 10.2.40.1/24;
                 no-redirects;
-                description CN2_MGMT;
             }
         }
     }
     irb {
-        unit CN210 {
+        unit 210 {
+            description "layer 3 interface for vlan CN2_USERS 210"
             family inet {
-                address 10.2.10/24;
+                address 10.2.10.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN2_USERS 210"
             }
         }
+    }
     irb {
-        unit CN220 {
+        unit 220 {
+            description "layer 3 interface for vlan CN2_PHONES 220"
             family inet {
-                address 10.2.20/24;
+                address 10.2.20.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN2_PHONES 220"
             }
         }
+    }
     irb {
-        unit CN230 {
+        unit 230 {
+            description "layer 3 interface for vlan CN2_PRINTERS 230"
             family inet {
-                address 10.2.30/24;
+                address 10.2.30.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN2_PRINTERS 230"
             }
         }
+    }
     irb {
-        unit CN240 {
+        unit 240 {
+            description "layer 3 interface for vlan CN2_MGMT 240"
             family inet {
-                address 10.2.40/24;
+                address 10.2.40.1/24;
                 no-redirects;
-                description "layer 3 interface for vlan CN2_MGMT 240"
             }
         }
-    irb {
-        unit CN2666 {
-            family inet {
-                address 10.2.666/24;
-                no-redirects;
-                description "layer 3 interface for vlan CN2_DEAD_VLAN 2666"
-            }
-        }
-    irb {
-        unit CN2999 {
-            family inet {
-                address 10.2.999/24;
-                no-redirects;
-                description "layer 3 interface for vlan CN2_NATIVE_VLAN 2999"
-            }
-        }
+    }
     xe-0/0/2 {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN2_USERS  CN2_PHONES  CN2_PRINTERS  CN2_MGMT ];
                 }
             }
         }
@@ -139,9 +127,9 @@ interfaces {
         unit 0 {
             family ethernet-switching {
                 native-vlan-id 999;
-                port-mode trunk;
+                interface-mode trunk;
                 vlan {
-                    members [ USERS  PHONES  PRINTERS  MGMT ];
+                    members [ CN2_USERS  CN2_PHONES  CN2_PRINTERS  CN2_MGMT ];
                 }
             }
         }
@@ -149,7 +137,7 @@ interfaces {
     xe-0/0/4 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -159,7 +147,7 @@ interfaces {
     xe-0/0/5 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -169,7 +157,7 @@ interfaces {
     xe-0/0/6 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -179,7 +167,7 @@ interfaces {
     xe-0/0/7 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -189,7 +177,7 @@ interfaces {
     xe-0/0/8 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -199,7 +187,7 @@ interfaces {
     xe-0/0/9 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -209,7 +197,7 @@ interfaces {
     xe-0/0/10 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -219,7 +207,7 @@ interfaces {
     xe-0/0/11 {
         unit 0 {
             family ethernet-switching {
-                port-mode access;
+                interface-mode access;
                 vlan {
                     members CN2_USERS;
                 }
@@ -322,7 +310,7 @@ protocols {
             }
             msti 1 {
                 bridge-priority 8k;
-                vlan [ USERS  PHONES  PRINTERS  MGMT ];
+                vlan [ 210  220  230  240 ];
             }
             
         }
