--- a/_output/set/AN8.conf
+++ b/_output/set/AN8.conf
@@ -12,29 +12,29 @@ set system syslog user * any emergency
 set system syslog file messages any notice
 set system syslog file messages authorization info
 set system syslog file interactive-commands interactive-commands any
-set interfaces irb unit 240 family inet address 192.168.2.8 /24
+set interfaces irb unit 240 description "CN2_MGMT"
+set interfaces irb unit 240 family inet address 192.168.2.8/24
 set interfaces irb unit 240 family inet no-redirects
-set interfaces irb unit 240 family inet description CN2_MGMT
 set interfaces xe-0/0/0 unit 0 family ethernet-switching native-vlan-id 999
 set interfaces xe-0/0/0 unit 0 family ethernet-switching port-mode trunk
-set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ USERS  PHONES  PRINTERS  MGMT ]
-set interfaces xe-0/0/1 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/0 unit 0 family ethernet-switching vlan members [ CN2_USERS  CN2_PHONES  CN2_PRINTERS  CN2_MGMT ]
+set interfaces xe-0/0/1 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/1 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/2 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/2 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/2 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/3 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/3 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/3 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/4 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/4 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/4 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/5 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/5 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/5 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/6 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/6 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/6 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/7 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/7 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/7 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/8 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/8 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/8 unit 0 family ethernet-switching vlan members CN2_USERS
-set interfaces xe-0/0/9 unit 0 family ethernet-switching port-mode access
+set interfaces xe-0/0/9 unit 0 family ethernet-switching interface-mode access
 set interfaces xe-0/0/9 unit 0 family ethernet-switching vlan members CN2_USERS
 set vlans CN2_USERS vlan-id 210
 set vlans CN2_USERS l3-interface irb.210
@@ -75,4 +75,4 @@ set protocols mstp interface xe-0/0/8 edge
 set protocols mstp interface xe-0/0/9 no-root-port
 set protocols mstp interface xe-0/0/9 edge
 set protocols mstp msti 1 bridge-priority 16k
-set protocols mstp msti 1 vlan [ USERS  PHONES  PRINTERS  MGMT ]
+set protocols mstp msti 1 vlan [ 210  220  230  240 ]
